--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -76,7 +76,7 @@
                 android:gravity="center_vertical|bottom"
                 android:paddingBottom="3dp"
                 android:paddingLeft="20dp"
-                android:text="甯羿书" />
+                android:text="甯毅书" />
 
             <TextView
                 android:layout_width="match_parent"
