--- a/app/src/main/res/layout/online_music_item.xml
+++ b/app/src/main/res/layout/online_music_item.xml
@@ -20,6 +20,14 @@
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"/>
 
+        <ImageView
+            android:id="@+id/download_iv"
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:clickable="true"
+            android:src="@drawable/download" />
+
     </LinearLayout>
 
 
