--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -21,10 +21,9 @@
        android:layout_below="@id/activity_download_toolbar">
 
    </ListView>
-   <!--<Button-->
-       <!--android:layout_width="368dp"-->
-       <!--android:layout_height="60dp"-->
-       <!--android:id="@+id/down_button"-->
-       <!--android:text="dsdsd" />-->
-
+   <FrameLayout
+       android:id="@+id/fragment_playbar"
+       android:layout_width="match_parent"
+       android:layout_height="52dp"
+       android:layout_alignParentBottom="true"/>
 </RelativeLayout>
